--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </div>
       </nav>
       <div class="fixed-action-btn">
-        <a class="btn-floating btn-large pink" href="index2.html">
-          <i class="large esterial-icons">+</i>
+        <a class="btn-floating btn-large waves-effect waves-light pink" href="index2.html"><i class="material-icons">add</i>
         </a>
     </body>
   </html>
