--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
       <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
       <nav>
       <div class="nav-wrapper blue blue-text">
+        <ul class="left hide-on-med-and-down">
+        <a href="mobile.html"><i class="material-icons">menu</i></a>
+        </ul>
         <a href="#" class="brand-logo">INBOX</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="mobile.html"><i class="material-icons">menu</i></a></li>
           <li><a href="sass.html"><i class="material-icons">search</i></a></li>
           <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
           <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-          <li><a href="#"><image class="circle" src="image/1.bmp" height="6%" width="6%"></image></a></li>
+          <li><a href=""><i class="material-icons">person</i></a></li>
         </ul>
       </div>
       </nav>
