--- a/index1.html
+++ b/index1.html
@@ -2,28 +2,60 @@
   <html>
     <head>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+      
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+      <script>
+          $("#dropdown-trigger").ready(function()
+              {
+                  $("#dropdown-trigger").dropdown();
+        
+              }
+            )
+      </script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <style type="text/css">
+        .circle{
+          position: absolute;
+          width: 42px;
+          height: 42px;
+          overflow: hidden;
+          left: 15px;
+          display: inline-block;
+          vertical-align: middle;
+          text-align: center;
+          font-size: 1.5em;
+          color: #fff;
+          padding: 10px;
+        }
+      </style>
     </head>
 
     <body>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
       <nav>
-      <div class="nav-wrapper blue blue-text">
-        <ul class="left hide-on-med-and-down">
-        <a href="mobile.html"><i class="material-icons">menu</i></a>
-        </ul>
-        <a href="#" class="brand-logo">INBOX</a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-          <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-          <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-          <li><a href=""><i class="material-icons">person</i></a></li>
-        </ul>
-      </div>
-      </nav>
-      <div class="fixed-action-btn">
-        <a class="btn-floating btn-large waves-effect waves-light pink" href="index2.html"><i class="material-icons">add</i>
-        </a>
+    <div class="nav-wrapper blue blue-text">
+       <a href="#"  class="brand-logo" data-target='dropdown1' id="dropdown-trigger">INBOX<i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+        <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+        <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+        <li><a href="mobile.html"><i class="material-icons">people</i></a></li>
+      </ul>
+    </div>
+  </nav>
+  <ul id="dropdown1" class="dropdown-content">
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">today</i>&emsp;&emsp;Today</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">email</i>&emsp;&emsp;Inbox</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">grade</i>&emsp;&emsp;Starred</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">bookmark</i>&emsp;&emsp;Important</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">drafts</i>&emsp;&emsp;Drafts</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">send</i>&emsp;&emsp;Sent</a></il><br>
+  </ul>
+  <div class="fixed-action-btn">
+      <a class="btn-floating btn-large waves-effect waves-light pink" href="index3.html"><i class="material-icons">add</i>
+      </a>
+  </div>
+
     </body>
   </html>
