--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,7 @@
       <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">send</i>&emsp;&emsp;Sent</a></il><br>
   </ul>
   <div class="fixed-action-btn">
-      <a class="btn-floating btn-large waves-effect waves-light pink" href="index3.html"><i class="material-icons">add</i>
+      <a class="btn-floating btn-large waves-effect waves-light pink" href="compose.html"><i class="material-icons">add</i>
       </a>
   </div>
 
