--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,7 @@
       <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
       <script>
           $("#dropdown-trigger").ready(function()
+
               {
                   $("#dropdown-trigger").dropdown();
         
@@ -28,6 +29,15 @@
           color: #fff;
           padding: 10px;
         }
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          padding: 12px 16px;
+          z-index: 1;
+}
       </style>
     </head>
 
@@ -45,12 +55,63 @@
     </div>
   </nav>
   <ul id="dropdown1" class="dropdown-content">
-      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">today</i>&emsp;&emsp;Today</a></li><br>
-      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">email</i>&emsp;&emsp;Inbox</a></li><br>
-      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">grade</i>&emsp;&emsp;Starred</a></li><br>
-      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">bookmark</i>&emsp;&emsp;Important</a></li><br>
-      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">drafts</i>&emsp;&emsp;Drafts</a></li><br>
-      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">send</i>&emsp;&emsp;Sent</a></il><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">today</i>Today</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">email</i>Inbox</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">grade</i>Starred</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">bookmark</i>Important</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">drafts</i>Drafts</a></li><br>
+      <li><a href="#!" class="brand-logo black-text"><i class="material-icons black-text">send</i>Sent</a></il><br>
+  </ul>
+  <ul class="collection">
+    <li class="collection-item avatar email-unread">
+      <span class="circle red">G</span>
+      <span class="email-title"><b>Glassdoor</b></span>
+      <p class="truncate blue-text ultra-medium"><b>New Reviews:LinkedIn</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content email-time"><span class="blue-text ultra-small">03:48-July 05</span></a>
+    </li>
+    <li class="collection-item avatar email-unread">
+      <span class="circle orange">L</span>
+      <span class="email-title"><b>LinkedIn Invitations</b></span>
+      <p class="truncate blue-text ultra-medium"><b>See Shiyi's connections,experience and more</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content email-time"><span class="blue-text ultra-small">16:32-July 04</span></a>
+    </li>
+    <li class="collection-item avatar email-unread">
+      <span class="circle blue">G</span>
+      <span class="email-title"><b>Google Wallet</b></span>
+      <p class="truncate blue-text ultra-medium"><b>LinkedIn</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content email-time"><span class="blue-text ultra-small">00:50-July 03</span></a>
+    </li>
+    <li class="collection-item avatar email-unread">
+      <span class="circle green">T</span>
+      <span class="email-title"><b>Twitch</b></span>
+      <p class="truncate blue-text ultra-medium"><b>forgg just went live on Twitch</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content"><i class="material-icons">grade</i></a>
+    </li>
+    <li class="collection-item avatar email-unread">
+      <span class="circle orange">D</span>
+      <span class="email-title"><b>Dropbox</b></span>
+      <p class="truncate blue-text ultra-medium"><b>Get the most from Dropbox</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content"><i class="material-icons">grade</i></a>
+    </li>
+    <li class="collection-item avatar email-unread">
+      <span class="circle blue">H</span>
+      <span class="email-title"><b>Heroku</b></span>
+      <p class="truncate blue-text ultra-medium"><b>Manage your data with Heroku Postgres</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content"><i class="material-icons">grade</i></a>
+    </li>
+    <li class="collection-item avatar email-unread">
+      <span class="circle blue">H</span>
+      <span class="email-title"><b>Heouku</b></span>
+      <p class="truncate blue-text ultra-medium"><b>Extend your app in a couple of clicks with Heroku Add-ons</b><br>
+      Glassdoor : Jobs|Reviews Sign in Get few mobile app 15updates from comparisons you &# following</p>
+      <a href="#" class="secondary-content"><i class="material-icons">grade</i></a>
+    </li>
   </ul>
   <div class="fixed-action-btn">
       <a class="btn-floating btn-large waves-effect waves-light pink" href="compose.html"><i class="material-icons">add</i>
