Fixed compose file

--- a/compose.html
+++ b/compose.html
@@ -26,10 +26,16 @@
   </nav>
   <br>
  <div class="collection">
-	 <a href="#!" class="collection-item black-text">From<input type="text" name="textbox1" width="25" height="20" /></a>
-	 <a href="#!" class="collection-item black-text">To<input type="text" name="textbox1" width="25" height="20" /></a>
-	 <a href="#!" class="collection-item black-text">Subject<input type="text" name="textbox1" width="25" height="20" /></a>
-	 <a href="#!" class="collection-item black-text">Compose email<input type="text" name="textbox1" width="25" height="20" /></a>
+    <ul class="right hide-on-med-and-down">
+        <li><a href=""><i class="material-icons black-text">keyboard_arrow_down</i></a></li>
+    </ul>
+	   <a href="#!" class="collection-item black-text">From<input type="text" name="textbox1" width="25" height="20" /></a>
+    <ul class="right hide-on-med-and-down">
+        <li><a href=""><i class="material-icons black-text">keyboard_arrow_down</i></a></li>
+    </ul>
+	   <a href="#!" class="collection-item black-text">To<input type="text" name="textbox1" width="25" height="20" /></a>
+	   <a href="#!" class="collection-item black-text">Subject<input type="text" name="textbox1" width="25" height="20" /></a>
+	   <a href="#!" class="collection-item black-text">Compose email<input type="text" name="textbox1" width="25" height="20" /></a>
  </div>
   
   <br>
