fixed design for UI/UX mockery

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     		z-index: 1;
     		top: 0;
     		left: 0;
-    		background-color: #e0e0e0;
+    		background-color: #29b6f6;
     		overflow-x: hidden;
     		transition: 0.5s;
     		padding-top: 60px;		
@@ -45,12 +45,12 @@
 	.material-icons{
 		float:right;		
 		font-size:30px;
-		color:#212121;
+		color:#000000 ;
 	}
 	.bar{
 		width:1355px;
 		height:50px;		
-		background-color:#e0e0e0;
+		background-color:#03a9f4;
 		box-shadow:2px 4px 8px 0 rgba(0,0,0,0.2);
 		transition:0.3;
 	}
